tenative fix for overflowing triple line playlist titles

--- a/app.css
+++ b/app.css
@@ -949,8 +949,8 @@
   /*----ARTIST PAGE---- */
 
   .main-entityHeader-title h1 {
-    font-size: 56px !important;
-    line-height: 56px !important;
+    font-size: 50px !important;
+    line-height: 50px !important;
   }
 
   /* Color Artist Image */
